2005-05-12 Stuart Prescott <s.prescott@unimelb.edu.au>
	* first cut at installing script 

2005-05-11 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled comments from either booking or from timeslotrule to appear in calendar view 
	* many CSS changes to make more sense of calendar view 
	* some simple HTML changes to ensure every tr has a td within it (validator.w3.org) 

2005-05-11 Stuart Prescott <s.prescott@unimelb.edu.au>
	* foreach cleanups 
	* permit comments in timeslotrule pictures 

2005-05-10 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled date ranges for deleted bookings and consumable usage views.  
	* included javascript +/- class to control a number of text fields 

2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
	* add an optional two-step sync algorithm for dbrow objects to facilitate join-table objects 

2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
	* admin can now view a list of deleted bookings for each instrument 

2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled admin to prevent users from changing the times of bookings or deleting bookings within a given time period of the booking (log/book paradigm) 

2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
	* Bugfixes and clean-ups for $TABLEPREFIX 

2005-05-07 Stuart Prescott <s.prescott@unimelb.edu.au>
	* first cut at implementing a TABLEPREFIX to permit shared database 

2005-05-07 Stuart Prescott <s.prescott@unimelb.edu.au>
	* bugfix: fix timeslotrule/bookingentry validation with FreeTime slots 
	 

2005-05-07 Stuart Prescott <s.prescott@unimelb.edu.au>
	* include per-instrument comment field  
	* handle timeslot 00:00 vs 24:00 end of booking problem 

2005-05-07 Stuart Prescott <s.prescott@unimelb.edu.au>
	* source reorganisation to protect includes from execution by webserver (.htaccess)

2005-05-06 Stuart Prescott <s.prescott@unimelb.edu.au>
	* revamped approach to creating timeslot rule data 
